[package]
name          = "deepl-api"
description   = "Bindings and a commandline tool for the DeepL REST API (https://www.deepl.com/docs-api/)"
version       = "0.2.0"
authors       = ["Martin Gruner <mg.pub@gmx.net>"]
edition       = "2018"
repository    = "https://github.com/mgruner/deepl-api-rs/"
documentation = "https://mgruner.github.io/deepl-api-rs-docs/deepl_api/index.html"
license       = "MIT OR Apache-2.0"
keywords      = ["deepl", "api", "translation", "ai", "machine-learning"]
categories    = ["command-line-utilities", "api-bindings", "internationalization", "text-processing"]

[dependencies]
error-chain = "0.12"
clap        = "3.0.0-beta.2"
serde       = { version = "1.0",  features = ["derive"] }
reqwest     = { version = "0.10", features = ["blocking", "json"] }

[dev-dependencies]
assert_cmd  = "1.0"
assert_fs   = "1.0"
predicates  = "1.0"
